# frida-desktop

./: README.md  meson.build  meson.options
docs/: chipquantum-basic-commands.md  debugger-class-a-autotune.md  freestanding-profile.md  runtime-debugger-arm-safety.md  runtime-stability-recorder.md
profiles/: runtime-debugger-arm-safety.json  runtime-stability-recorder.json
tools/: chipquantum-basic-commands.c  chipquantum-benchmark.c  chipquantum-repo-sensors.py  frida-debugger-class-a-autotune.c  frida-debugger-class-a-autotune.h  frida-runtime-stability-recorder-selftest.c  frida-runtime-stability-recorder.c  frida-runtime-stability-recorder.h  validate-chipquantum-basic-commands.py  validate-debugger-class-a-autotune.py  validate-freestanding-profile.py  validate-runtime-debugger-arm-safety.py  validate-runtime-stability-recorder.py
